force-app/main/default/objects/OportunidadCTM__c/OportunidadCTM__c.object-meta.xml
<CustomObject>
    <label>OportunidadCTM</label>
    <nameField>
        <label>Nombre de OportunidadCTM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OportunidadCTM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>