force-app/main/default/objects/OportunidadCTM__c/fields/Contracto__c.field-meta.xml
<CustomField>
    <fullName>Contracto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracto</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>OportunidadCTM</relationshipLabel>
    <relationshipName>OportunidadCTM</relationshipName>
    <type>Lookup</type>
</CustomField>