force-app/main/default/objects/OportunidadCTM__c/fields/Descripci_n__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n__c</fullName>
    <label>Descripción</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>