force-app/main/default/objects/OportunidadCTM__c/fields/Fecha_de_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Cierre__c</fullName>
    <label>Fecha de Cierre</label>
    <type>Date</type>
</CustomField>