force-app/main/default/objects/OportunidadCTM__c/fields/NextStep__c.field-meta.xml
<CustomField>
    <fullName>NextStep__c</fullName>
    <label>Siguiente paso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>