force-app/main/default/objects/OportunidadCTM__c/fields/Origen_del_prospecto__c.field-meta.xml
<CustomField>
    <fullName>Origen_del_prospecto__c</fullName>
    <label>Origen del prospecto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacto referido</fullName>
            </value>
            <value>
                <fullName>Campaña</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Tienda en línea</fullName>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Agentforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>