force-app/main/default/objects/OportunidadCTM__c/fields/PctComisionOllin__c.field-meta.xml
<CustomField>
    <fullName>PctComisionOllin__c</fullName>
    <label>PctComisionOllin</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>