force-app/main/default/objects/OportunidadCTM__c/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presupuesto sincronizado</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>OportunidadCTM</relationshipLabel>
    <relationshipName>OportunidadCTM</relationshipName>
    <type>Lookup</type>
</CustomField>