force-app/main/default/objects/OportunidadCTM__c/fields/Probabilidad__c.field-meta.xml
<CustomField>
    <fullName>Probabilidad__c</fullName>
    <label>Probabilidad (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>