force-app/main/default/objects/OportunidadCTM__c/fields/Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del Prospecto</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>OportunidadCTM</relationshipLabel>
    <relationshipName>OportunidadCTM</relationshipName>
    <type>Lookup</type>
</CustomField>