force-app/main/default/objects/OportunidadCTM__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oportunidad creada</fullName>
            </value>
            <value>
                <fullName>Análisis/Levantamiento de información</fullName>
            </value>
            <value>
                <fullName>Cotización iniciada</fullName>
            </value>
            <value>
                <fullName>Propuesta enviada / presentada</fullName>
            </value>
            <value>
                <fullName>Seguimiento</fullName>
            </value>
            <value>
                <fullName>Cierre ganado</fullName>
            </value>
            <value>
                <fullName>Cierre perdido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>